# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.0.7] - 2018-11-15
### Changed
- Fix packaging by adding MANIFEST.in with correct files

## [0.0.6] - 2018-11-14
### Added
- Add "credentials" subcommand to the "service-test" command to dump SSH
  credentials for currently deployed service.
- Add contributor guide and initial list of known modules.

### Changed
- Fix errors in code examples in README.
- Update botocore, moto, and other package dependencies.

## [0.0.5] - 2018-10-15
### Added
- Add documentation about how to set up CLI auto completion
- Add --count option to service creation command line

### Changed
- Speed up GCE client by only creating driver once
- Put temporary test state in a .cloudless directory
- Reduce resource usage in examples and tests
- Fix multiple firewall deletions when service references itself
- Fix paths being printed in service output for other networks

## [0.0.4] - 2018-09-24
### Changed
- Make missing paramiko package real dependency instead of just test dependency.

## [0.0.3] - 2018-09-24
### Added
- Added "image-build" command to build machine images from blueprints.
- Added "service-test" command to test services created from blueprints.
- Added "image" command to mange machine images.

## [0.0.2] - 2018-09-15
### Added
- Added "cldls" command to manage networks, services, and paths.

## [0.0.1] - 2018-09-10
### Added
- Autogenerated documentation using pydoc-markdown.

### Changed
- Install "twine" as a dev dependency.
- Add an option to "setup.py upload" to use the test index by default.
- Pin package dependency major and minor versions.

## [0.0.0] - 2018-09-09
### Added
- First tagged pypi release!