@@ -44,11 +44,8 @@ class ASG:
     Autoscaling groups helpers class.
     """
 
-    def __init__(self, driver, credentials):
+    def __init__(self, driver):
         self.driver = driver
-        if credentials:
-            # Currently only using the global defaults is supported
-            raise NotImplementedError("Passing credentials not implemented")
 
     def _describe_launch_configuration(self, asg_name):
         autoscaling = self.driver.client("autoscaling")
