@@ -26,11 +26,10 @@ class NetworkClient:
     This is the object through which all network related calls are made for AWS.
     """
 
-    def __init__(self, driver, credentials, mock=False):
+    def __init__(self, driver, mock=False):
         self.driver = driver
-        self.credentials = credentials
         self.mock = mock
-        self.internet_gateways = InternetGateways(driver, credentials)
+        self.internet_gateways = InternetGateways(driver)
 
     def create(self, name, blueprint):
         """
