@@ -5,6 +5,9 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Added
+- Allow setting "profile" in the AWS credentials to select a specific AWS
+  profile.
 
 ## [0.0.7] - 2018-11-15
 ### Changed
